package org.csc133.a2;

public interface IsSteerable {
    public void steerLeft();
    public void steerRight();
}
